[gd_scene load_steps=3 format=2]

[ext_resource path="res://icons/Folder.svg" type="Texture" id=1]
[ext_resource path="res://src/menu/topbar/SettingsWindow.gd" type="Script" id=2]


[node name="SettingsWindow" type="WindowDialog"]
margin_left = 48.0
margin_top = 42.0
margin_right = 688.0
margin_bottom = 225.0
size_flags_horizontal = 5
size_flags_vertical = 5
popup_exclusive = true
window_title = "Settings"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 624.0
margin_bottom = 175.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_right = 614.0
margin_bottom = 165.0
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 614.0
margin_bottom = 111.0
custom_constants/vseparation = 5
custom_constants/hseparation = 15
columns = 4

[node name="ConfigPathLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 111.0
margin_bottom = 19.0
text = "Configuration File"
align = 2

[node name="ConfigPathField" type="LineEdit" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_right = 536.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 100
editable = false

[node name="ConfigPathFileDialogButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 551.0
margin_right = 579.0
margin_bottom = 24.0
icon = ExtResource( 1 )

[node name="dummy" type="Control" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 594.0
margin_right = 614.0
margin_bottom = 24.0

[node name="JavaPathLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 34.0
margin_right = 111.0
margin_bottom = 48.0
text = "Java Path"
align = 2

[node name="JavaPathField" type="LineEdit" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_top = 29.0
margin_right = 536.0
margin_bottom = 53.0
editable = false

[node name="JavaPathFileDialogButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 551.0
margin_top = 29.0
margin_right = 579.0
margin_bottom = 53.0
icon = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="JavaStatusLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 594.0
margin_top = 34.0
margin_right = 614.0
margin_bottom = 48.0
rect_min_size = Vector2( 20, 0 )

[node name="LibSBGNPathLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 63.0
margin_right = 111.0
margin_bottom = 77.0
text = "LibSBGN Path"
align = 2

[node name="LibSBGNPathField" type="LineEdit" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_top = 58.0
margin_right = 536.0
margin_bottom = 82.0
editable = false

[node name="LibSBGNPathLabelFileDialogButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 551.0
margin_top = 58.0
margin_right = 579.0
margin_bottom = 82.0
icon = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="LibSBGNStatusLabel2" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 594.0
margin_top = 63.0
margin_right = 614.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 0 )

[node name="GitPathLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 92.0
margin_right = 111.0
margin_bottom = 106.0
text = "Git Path"
align = 2

[node name="GitPathField" type="LineEdit" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 126.0
margin_top = 87.0
margin_right = 536.0
margin_bottom = 111.0
editable = false

[node name="GitPathFileDialogButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 551.0
margin_top = 87.0
margin_right = 579.0
margin_bottom = 111.0
icon = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="GitStatusLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 594.0
margin_top = 92.0
margin_right = 614.0
margin_bottom = 106.0
rect_min_size = Vector2( 20, 0 )

[node name="MessageLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 614.0
margin_bottom = 135.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 614.0
margin_bottom = 165.0
custom_constants/separation = 10
alignment = 1

[node name="SaveButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 258.0
margin_right = 299.0
margin_bottom = 20.0
text = "Save"

[node name="CloseButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 309.0
margin_right = 356.0
margin_bottom = 20.0
text = "Close"

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 1.1189
margin_top = 214.249
margin_right = 598.119
margin_bottom = 559.249
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/Users/Ludo/Documents/GodotProjects/SBGNtest"
current_path = "/Users/Ludo/Documents/GodotProjects/SBGNtest/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/GridContainer/JavaPathFileDialogButton" to="." method="_on_JavaPathFileDialogButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/GridContainer/LibSBGNPathLabelFileDialogButton" to="." method="_on_LibSBGNPathLabelFileDialogButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/GridContainer/GitPathFileDialogButton" to="." method="_on_GitPathFileDialogButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
